Revert "Fixed notification overflow"
This reverts commit db56273d8f85a52c22d9cd58468a29c3d866090e.

--- a/notification_styles.css
+++ b/notification_styles.css
@@ -40,7 +40,6 @@
 	flex-direction: column;
 	flex-grow: 1;
 	margin: 8px;
-	width: 0px;
 }
 .notificationtitle{
 	font-size: 160%;
